--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=NoteManagment
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/yourdatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=yourpassword
